2001-05-20 23:15 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/classes.c
     + hb_objGetRealClsName(object, szmsg )
       Return the real class name regarding the Message called
       So as an inherited method will return it's real class parent 
   * harbour/source/vm/proc.c
     * modified PROCNAME() to call the new classes function
   * harbour/include/hbapi.h
     + added hb_objGetRealClsName
   * harbour/include/hbclass.ch
     + added xtranslate to allow MethodName as the same as ProcName
       (a la class(y) )

2001-05-20 13:35 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>

*contrib/hbzlib/zip.c
    *Fixed an small bug on hb_zipfilebytdspan()
contrib/hbzlib/doc/zipnew.txt
    *Updated the doc to reflect the change

2001-05-19 19:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
+contrib/hbzlib/hbzip2.h
    *include files need by the library
+contrib/hbzlib/zip.c
    *Harbour Level functions for hbzlib
+contrib/hbzlib/zipcomp.cpp
    *Low level api's for hbzlib compression
+contrib/hbzlib/zipnew.cpp
    *Low level api's for hbzlib Extraction
+contrib/hbzlib/makefile2.bc
    *makefile to make the new hbzlib
+contrib/hbzlib/doc/zipnew.txt
    *Docs for the new hbzlib function interface
*utils/hbmake/hbmake.prg
    *Fixed an small bug when generating the script(possibitity fo not find the file under linux)
    *updated to the new license

2001-05-18 13:20 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * source/rtl/dbdelim.prg
  * source/rtl/dbsdf.prg
    ! Fixed bug where using a WHILE condition failed to test
      for BOF or EOF, resulting in incorrect or blank records.

  * tests/delimtst.prg
  * tests/sdf_test.prg
    * Added a new test (4a) to demonstrate the fix.

2001-05-18 09:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbfntx/dbfntx1.c
     * indexes now are opened with FO_READWRITE regardless of
       readonly mode on/off to allow locking.